# twebserver

./: .gitignore  CMakeLists.txt  FindTCL.cmake  LICENSE  library.c  library.h  pkgIndex.tcl  pkgIndex.tcl.in  readme.md
.github/workflows/: linux-build-9.yml  linux-build.yml
certs/: cert.pem  key.pem
certs/ca/: ca.crt  ca.key  readme.md
certs/client/: client.crt  client.csr  client.key  readme.md
certs/host1/: csr.pem
certs/host2/: cert.pem  csr.pem  key.pem
cmake/: FindTCL.cmake
docker/: Dockerfile  install.sh  readme.md  start.sh
docker/examples/: example-best-with-router.tcl
docs/: benchmark.md  certs.md  commands.md  config.md  ctx_req_res_dict.md  install.md  middleware.md  routing.md
examples/: example-best-with-native-threads.tcl  example-best-with-router.tcl  example-best-with-session.tcl  example-with-multiple-servers.tcl  example-with-req-resp.tcl  example-with-return-response.tcl  example-with-routing.tcl  example-with-sqlite.tcl  example-with-threads.tcl  example-without-routing.tcl  example.tcl  simple.tcl
old/: Makefile  app.tcl  https.c  main  readme.md
src/: base64.c  base64.h  common.c  common.h  conn.c  conn.h  crypto.c  crypto.h  form.c  form.h  http.c  http.h  https.c  https.h  library.c  request.c  request.h  return.c  return.h  router.c  router.h  uri.h
src/base64/: cdecode.c  cdecode.h  cencode.c  cencode.h
src/path_regexp/: path_regexp.c  path_regexp.h
tests/: add_cookie.test  addr.test  all.tcl  base64_decode.test  base64_encode.test  basic_read_write.test  client_cert.test  decode_uri_component.test  encode_query.test  encode_uri_component.test  form.test  hex_encode_decode.test  parse_cookie.test  parse_request.test  routing.test  setup_server_echo.tcl  setup_server_routing.tcl  sha1_sha256_sha512.test  urldecode.test  urlencode.test
